--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.CountryQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".QuizActivity"
+            android:exported="false"
+            android:label="@string/title_activity_quiz"
+            android:theme="@style/Theme.CountryQuiz" />
+        <activity
             android:name=".country_list"
             android:exported="false" />
         <activity
