--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CountryQuiz"
         tools:targetApi="31">
         <activity
-            android:name=".country_list"
+            android:name=".QuizActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
