--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.CountryQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".PastQuizzesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuizResultFragment"
+            android:exported="false" />
+        <activity
             android:name=".QuizResultsActivity"
             android:exported="false" />
         <activity
