--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".PastQuizzesActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".QuizResultFragment"
             android:exported="false" />
         <activity
             android:name=".QuizResultsActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".SwipeActivity"
